# local-eval-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADDING_TASKS.md  BENCHMARK.md  ROUTING.md
harness/: __init__.py  core.py  models.py  router.py  run_eval.py
harness/graders/: __init__.py  grade_lean.py  grade_md.py  grade_py.py  grade_synth.py
scripts/: openai_cli.py  plot_known_results.py
tasks/lean/: l01_np_verifier.lean  l02_reduction_transitive.lean  l03_np_complete_in_p.lean  l04_np_conp_collapse.lean  l05_sat_np_complete.lean  l06_certificate_bound.lean
tasks/md/: t01_bigO_edges.md  t02_polygon_angles.md  t03_series_eps.md  t04_ineq_border.md  t05_np_verifier.md  t06_reduction_direction.md  t07_np_complete_conp.md  t08_empty_language.md  t09_reduction_transitive.md  t10_certificate_bound.md
tasks/py/r01_slugify/: impl.py  tests.py
tasks/py/r02_stats/: impl.py  tests.py
tasks/py/r03_parser/: impl.py  tests.py
tasks/py/r04_cache/: impl.py  tests.py
tasks/synth/: s01_compactness.md  s02_lipschitz.md  s03_cntrex.md  s04_graph_lemma.md  s05_np_verifier.md  s06_np_complete_in_p.md  s07_np_conp_collapse.md  s08_reduction_transitive.md  s09_complement_complete.md  s10_sat_3sat.md
tests/: test_graders.py
